src/test/data/tests/chapter_17/invalid_types/void/void_equality.c
void f(void){
    return;
}

int main(void) {
    // you can't compare void expressions
    return f() == f();
}
